--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,10 @@ html {
   @apply glassmorphism w-16 border-[2px] rounded-lg flex flex-col justify-center items-center ml-1 py-4 gap-4 px-9;
 }
 
+.colorpicker-container {
+  @apply absolute bottom-full glassmorphism p-1 mb-1 w-[195px] h-fit rounded-md flex flex-row gap-4;
+}
+
 .filtertabs-container {
   @apply absolute z-10 bottom-5 right-0 left-0 w-full flex justify-center items-center flex-wrap gap-4;
 }
